@@ -11,17 +11,16 @@ echo '> kill old'
 kill $(cat ./pid)
 
 echo '> start'
-chmod +x ahdbserver-1.3.2-SNAPSHOT-runner
+chmod +x ahdbserver-1.3.3-SNAPSHOT-runner
 VERSION=$(<version.txt)
 
-# nohup ./ahdbserver-1.3.2-SNAPSHOT-runner \
+# nohup ./ahdbserver-1.3.3-SNAPSHOT-runner \
 # -Xmx"${1:-256m}" \
 # -DVersion="$VERSION" \
 # -XX:+PrintGC -XX:+PrintGCTimeStamps +XX:+PrintHeapShape \
 # >> ./ahdbserver.log & echo $! > pid
 
-nohup ./ahdbserver-1.3.2-SNAPSHOT-runner \
+nohup ./ahdbserver-1.3.3-SNAPSHOT-runner \
 -DVersion="$VERSION" \
--XX:+PrintGC -XX:+PrintGCTimeStamps +XX:+PrintHeapShape \
 -Xmn30M -Xmx32M \
 >> ./ahdbserver.log & echo $! > pid
